--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     .tab-active { @apply bg-neutral-700; }
     .list-scroll { height: calc(100vh - 220px); }
     .mono { font-variant-numeric: tabular-nums; }
+
+    /* 전체화면에선 뷰어만 남기고 나머지 숨김 */
+    body.fs #topbar, body.fs #sidebar { display:none; }
+    body.fs #layout { grid-template-columns: 1fr !important; }
+    body.fs #viewerCard { @apply col-span-12; }
   </style>
 </head>
 <body>
   <div id="app" class="p-4 max-w-7xl mx-auto">
-    <header class="flex items-center justify-between gap-4 mb-4">
+    <header id="topbar" class="flex items-center justify-between gap-4 mb-4">
       <h1 class="text-2xl font-bold">제15회 스누풀대회 전광판</h1>
       <div class="flex gap-2">
         <button id="tab-bracket" class="tab tab-active">대진표</button>
@@ -26,8 +31,8 @@
       </div>
     </header>
 
-    <section class="grid grid-cols-1 lg:grid-cols-12 gap-4">
-      <aside class="card lg:col-span-4 p-4">
+    <section id="layout" class="grid grid-cols-1 lg:grid-cols-12 gap-4">
+      <aside id="sidebar" class="card lg:col-span-4 p-4">
         <div class="flex items-center justify-between mb-2">
           <h2 id="list-title" class="font-semibold">경기</h2>
           <div class="text-sm text-neutral-400" id="updatedAt"></div>
@@ -38,7 +43,7 @@
         <ul id="eventList" class="list-scroll overflow-y-auto divide-y divide-neutral-800"></ul>
       </aside>
 
-      <main class="lg:col-span-8 card p-4">
+      <main id="viewerCard" class="lg:col-span-8 card p-4">
         <div class="flex items-center justify-between mb-3">
           <div class="flex items-center gap-2">
             <button id="prevBtn" class="btn" title="이전(←)">←</button>
@@ -56,22 +61,23 @@
     const AUTO_REFRESH_MS = 15000;
 
     function isFS(){ return !!document.fullscreenElement; }
-    function enterFS(){ document.documentElement.requestFullscreen && document.documentElement.requestFullscreen(); }
-    function exitFS(){ document.exitFullscreen && document.exitFullscreen(); }
+    function enterFS(){ if (document.documentElement.requestFullscreen) document.documentElement.requestFullscreen(); }
+    function exitFS(){ if (document.exitFullscreen) document.exitFullscreen(); }
     function updateFSUI(){
+      // 화살표는 전체화면에서만 노출
       const arrowsVisible = isFS();
       document.getElementById('prevBtn').style.display = arrowsVisible ? '' : 'none';
       document.getElementById('nextBtn').style.display = arrowsVisible ? '' : 'none';
       document.getElementById('fsBtn').textContent = isFS() ? '전체화면 종료' : '전체화면';
+      // 레이아웃 토글 (뷰어만 보이게)
+      document.body.classList.toggle('fs', isFS());
     }
     document.addEventListener('fullscreenchange', updateFSUI);
 
     let MODE = 'bracket';
     let state = { bracket: [], results: [], filteredList: [], selectedIndex: 0 };
 
-    function fmtTitle(e) {
-      return MODE==='bracket' ? `${e.key} ${e.title}` : `${e.main} ${e.title}`;
-    }
+    function fmtTitle(e) { return MODE==='bracket' ? `${e.key} ${e.title}` : `${e.main} ${e.title}`; }
 
     function buildList() {
       const listEl = document.getElementById('eventList');
@@ -103,37 +109,55 @@
       v.innerHTML = '';
       const e = state.filteredList[state.selectedIndex];
       if (!e) return;
+
       const title = document.createElement('div');
-      title.className = 'text-xl font-semibold mb-3';
+      title.className = 'text-2xl font-extrabold mb-3';
       title.textContent = fmtTitle(e);
       v.appendChild(title);
 
       const table = document.createElement('table');
-      table.className = 'w-full text-sm mono';
+      table.className = 'w-full text-lg mono';
       const thead = document.createElement('thead');
       const trh = document.createElement('tr');
       const headers = MODE==='bracket' ? ['레인','이름','팀명','순위','기록','비고'] : ['순위','이름','팀명','조','레인','기록','결승 진출'];
       headers.forEach(h=>{
         const th = document.createElement('th');
-        th.className = 'border border-neutral-700 px-2 py-1 font-medium';
+        th.className = 'border border-neutral-700 px-3 py-2 font-bold';
         th.textContent = h;
         trh.appendChild(th);
       });
       thead.appendChild(trh);
-      const tbody = document.createElement('tbody');
 
-      const rows = MODE==='bracket' ? e.rows : e.items;
-      rows.forEach(r=>{
-        const tr = document.createElement('tr');
-        const cells = MODE==='bracket' ? [r.lane,r.name,r.team,r.rank,r.time,r.note] : [r.rank,r.name,r.team,r.heat,r.lane,r.time,r.finalNote];
-        cells.forEach(c=>{
-          const td = document.createElement('td');
-          td.className = 'border border-neutral-700 px-2 py-1 text-center';
-          td.textContent = c || '';
-          tr.appendChild(td);
+      const tbody = document.createElement('tbody');
+      if (MODE==='bracket') {
+        // 무조건 1~8레인 모두 출력 (비어있어도 표시)
+        const map = {};
+        (e.rows || []).forEach(r=>{ map[String(r.lane)] = r; });
+        for (let lane=1; lane<=8; lane++) {
+          const r = map[String(lane)] || { lane, name:'', team:'', rank:'', time:'', note:'' };
+          const tr = document.createElement('tr');
+          [r.lane, r.name, r.team, r.rank, r.time, r.note].forEach(c => {
+            const td = document.createElement('td');
+            td.className = 'border border-neutral-700 px-3 py-2 text-center';
+            td.textContent = c || '';
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        }
+      } else {
+        // 기록 표는 받은 순서대로 출력
+        (e.items || []).forEach(r=>{
+          const tr = document.createElement('tr');
+          const cells = [r.rank,r.name,r.team,r.heat,r.lane,r.time,r.finalNote];
+          cells.forEach(c=>{
+            const td = document.createElement('td');
+            td.className = 'border border-neutral-700 px-3 py-2 text-center';
+            td.textContent = c || '';
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
         });
-        tbody.appendChild(tr);
-      });
+      }
 
       table.appendChild(thead);
       table.appendChild(tbody);
@@ -155,10 +179,7 @@
     async function fetchAll() {
       document.getElementById('updatedAt').textContent = '불러오는 중…';
       const resp = await fetch(API_URL, { cache:'no-store' }).then(r=>r.json());
-      if (!resp.ok) {
-        document.getElementById('updatedAt').textContent = 'API 오류';
-        return;
-      }
+      if (!resp.ok) { document.getElementById('updatedAt').textContent = 'API 오류'; return; }
       state.bracket = resp.bracket;
       state.results = resp.results;
       rebuild(MODE);
@@ -173,13 +194,12 @@
     });
 
     function move(delta) {
-      const n = state.filteredList.length;
-      if (n===0) return;
+      const n = state.filteredList.length; if (n===0) return;
       state.selectedIndex = (state.selectedIndex + delta + n) % n;
       highlightActive(); renderViewer();
     }
     document.addEventListener('keydown', (e)=>{
-      if (!isFS()) return;
+      if (!isFS()) return; // 전체화면일 때만
       if (e.key === 'ArrowLeft') move(-1);
       if (e.key === 'ArrowRight') move(1);
     });
