--- a/index.html
+++ b/index.html
@@ -64,148 +64,12 @@
     function enterFS(){ if (document.documentElement.requestFullscreen) document.documentElement.requestFullscreen(); }
     function exitFS(){ if (document.exitFullscreen) document.exitFullscreen(); }
     function updateFSUI(){
-      // 화살표는 전체화면에서만 노출
       const arrowsVisible = isFS();
-      document.getElementById('prevBtn').style.display = arrowsVisible ? '' : 'none';
-      document.getElementById('nextBtn').style.display = arrowsVisible ? '' : 'none';
-      document.getElementById('fsBtn').textContent = isFS() ? '전체화면 종료' : '전체화면';
-      // 레이아웃 토글 (뷰어만 보이게)
-      document.body.classList.toggle('fs', isFS());
-    }
-    document.addEventListener('fullscreenchange', updateFSUI);
-
-    let MODE = 'bracket';
-    let state = { bracket: [], results: [], filteredList: [], selectedIndex: 0 };
-
-    function fmtTitle(e) { return MODE==='bracket' ? `${e.key} ${e.title}` : `${e.main} ${e.title}`; }
-
-    function buildList() {
-      const listEl = document.getElementById('eventList');
-      listEl.innerHTML = '';
-      state.filteredList.forEach((e, idx) => {
-        const li = document.createElement('li');
-        li.className = 'py-2 px-2 hover:bg-neutral-800 cursor-pointer flex items-center justify-between';
-        const span = document.createElement('span');
-        span.textContent = fmtTitle(e);
-        const badge = document.createElement('span');
-        badge.className = 'text-xs text-neutral-400';
-        badge.textContent = MODE==='bracket' ? (e.rows?.length||0)+'명' : (e.items?.length||0)+'명';
-        li.append(span, badge);
-        li.onclick = ()=>{ state.selectedIndex = idx; renderViewer(); highlightActive(); };
-        listEl.appendChild(li);
-      });
-      highlightActive();
-    }
-
-    function highlightActive() {
-      const listEl = document.getElementById('eventList');
-      ;[...listEl.children].forEach((li, i)=>{
-        li.classList.toggle('bg-neutral-800', i===state.selectedIndex);
-      });
-    }
-
-    function renderViewer() {
-      const v = document.getElementById('viewer');
-      v.innerHTML = '';
-      const e = state.filteredList[state.selectedIndex];
-      if (!e) return;
-
-      const title = document.createElement('div');
-      title.className = 'text-2xl font-extrabold mb-3';
-      title.textContent = fmtTitle(e);
-      v.appendChild(title);
-
-      const table = document.createElement('table');
-      table.className = 'w-full text-lg mono';
-      const thead = document.createElement('thead');
-      const trh = document.createElement('tr');
-      const headers = MODE==='bracket' ? ['레인','이름','팀명','순위','기록','비고'] : ['순위','이름','팀명','조','레인','기록','결승 진출'];
-      headers.forEach(h=>{
-        const th = document.createElement('th');
-        th.className = 'border border-neutral-700 px-3 py-2 font-bold';
-        th.textContent = h;
-        trh.appendChild(th);
-      });
-      thead.appendChild(trh);
-
-      const tbody = document.createElement('tbody');
-      if (MODE==='bracket') {
-        // 무조건 1~8레인 모두 출력 (비어있어도 표시)
-        const map = {};
-        (e.rows || []).forEach(r=>{ map[String(r.lane)] = r; });
-        for (let lane=1; lane<=8; lane++) {
-          const r = map[String(lane)] || { lane, name:'', team:'', rank:'', time:'', note:'' };
-          const tr = document.createElement('tr');
-          [r.lane, r.name, r.team, r.rank, r.time, r.note].forEach(c => {
-            const td = document.createElement('td');
-            td.className = 'border border-neutral-700 px-3 py-2 text-center';
-            td.textContent = c || '';
-            tr.appendChild(td);
-          });
-          tbody.appendChild(tr);
-        }
-      } else {
-        // 기록 표는 받은 순서대로 출력
-        (e.items || []).forEach(r=>{
-          const tr = document.createElement('tr');
-          const cells = [r.rank,r.name,r.team,r.heat,r.lane,r.time,r.finalNote];
-          cells.forEach(c=>{
-            const td = document.createElement('td');
-            td.className = 'border border-neutral-700 px-3 py-2 text-center';
-            td.textContent = c || '';
-            tr.appendChild(td);
-          });
-          tbody.appendChild(tr);
-        });
-      }
-
-      table.appendChild(thead);
-      table.appendChild(tbody);
-      v.appendChild(table);
-    }
-
-    function rebuild(mode) {
-      MODE = mode;
-      document.getElementById('tab-bracket').classList.toggle('tab-active', MODE==='bracket');
-      document.getElementById('tab-results').classList.toggle('tab-active', MODE==='results');
-      document.getElementById('list-title').textContent = '경기';
-      const list = MODE==='bracket' ? state.bracket : state.results;
-      state.filteredList = list.slice();
-      state.selectedIndex = 0;
-      buildList();
-      renderViewer();
-    }
-
-    async function fetchAll() {
-      document.getElementById('updatedAt').textContent = '불러오는 중…';
-      const resp = await fetch(API_URL, { cache:'no-store' }).then(r=>r.json());
-      if (!resp.ok) { document.getElementById('updatedAt').textContent = 'API 오류'; return; }
-      state.bracket = resp.bracket;
-      state.results = resp.results;
-      rebuild(MODE);
-      document.getElementById('updatedAt').textContent = new Date(resp.updatedAt).toLocaleTimeString('ko-KR') + ' 업데이트';
-    }
-
-    document.getElementById('search').addEventListener('input', (e)=>{
-      const q = e.target.value.trim();
-      const list = MODE==='bracket' ? state.bracket : state.results;
-      state.filteredList = list.filter(ev => (fmtTitle(ev).includes(q)));
-      state.selectedIndex = 0; buildList(); renderViewer();
-    });
-
-    function move(delta) {
-      const n = state.filteredList.length; if (n===0) return;
-      state.selectedIndex = (state.selectedIndex + delta + n) % n;
-      highlightActive(); renderViewer();
-    }
-    document.addEventListener('keydown', (e)=>{
-      if (!isFS()) return; // 전체화면일 때만
-      if (e.key === 'ArrowLeft') move(-1);
-      if (e.key === 'ArrowRight') move(1);
-    });
-    document.getElementById('prevBtn').onclick = ()=>{ if (isFS()) move(-1); };
+      document.getElementById('prevBtn').onclick = ()=>{ if (isFS()) move(-1); };
     document.getElementById('nextBtn').onclick = ()=>{ if (isFS()) move(1); };
     document.getElementById('fsBtn').onclick = ()=>{ isFS() ? exitFS() : enterFS(); };
+    document.getElementById('tab-bracket').onclick = ()=>{ state.page=0; rebuild('bracket'); };
+    document.getElementById('tab-results').onclick = ()=>{ state.page=0; rebuild('results'); };
     updateFSUI();
 
     fetchAll();
