--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     .card { border-radius:16px; background:#1a1a1a; box-shadow:0 2px 6px rgba(0,0,0,0.5); border:1px solid #333; }
     .btn { display:inline-flex; align-items:center; justify-content:center; padding:6px 12px; border-radius:8px; background:#444; cursor:pointer; }
     .btn:hover { background:#666; }
-    .tab, .btn { border:none; background:none; color:inherit; }
-    .tab { padding:6px 12px; cursor:pointer; }
-    .tab-active { text-decoration: underline; }
+    .tab { padding:6px 12px; border-radius:8px; cursor:pointer; }
+    .tab-active { background:#555; }
     .list-scroll { height: calc(100vh - 220px); overflow-y:auto; }
     .mono { font-variant-numeric: tabular-nums; }
     table { width:100%; border-collapse:collapse; }
@@ -26,11 +25,11 @@
 <body>
   <div id="app" style="padding:16px; max-width:1200px; margin:0 auto;">
     <header id="topbar" style="display:flex; align-items:center; justify-content:space-between; gap:16px; margin-bottom:16px;">
-      <h1 style="font-size:20px; font-weight:bold;">제15회 SNUPOOL배 대학부 수영대회 전광판</h1>
+      <h1 style="font-size:20px; font-weight:bold;">제15회 스누풀대회 전광판</h1>
       <div style="display:flex; gap:8px;">
         <button id="tab-bracket" class="tab tab-active">대진표</button>
         <button id="tab-results" class="tab">기록</button>
-        <button id="fsBtn" class="btn">전체화면</button>
+        <button id="fsBtn" class="btn" title="전체화면 전환">전체화면</button>
       </div>
     </header>
 
@@ -52,7 +51,7 @@
             <button id="prevBtn" class="btn" title="이전(←)">←</button>
             <button id="nextBtn" class="btn" title="다음(→)">→</button>
           </div>
-          <div style="font-size:12px; color:#999;">전체화면: Enter / ← → 이동 / ESC 종료</div>
+          <div style="font-size:12px; color:#999;">전체화면에서 ← → 키 이동 / ESC 종료</div>
         </div>
         <div id="viewer"></div>
       </main>
@@ -202,16 +201,7 @@
       if(isFS()&&state.totalPages>1){ const next=state.page+delta; if(next>=0&&next<state.totalPages){ state.page=next; highlightActive(); renderViewer(); return; } }
       state.page=0; state.selectedIndex=(state.selectedIndex+delta+n)%n; highlightActive(); renderViewer();
     }
-
-    document.addEventListener('keydown', e => {
-      if (e.key === 'Enter') {
-        if (isFS()) { exitFS(); } else { enterFS(); }
-      }
-      if (!isFS()) return;
-      if (e.key==='ArrowLeft') move(-1);
-      if (e.key==='ArrowRight') move(1);
-    });
-
+    document.addEventListener('keydown',e=>{ if(!isFS())return; if(e.key==='ArrowLeft')move(-1); if(e.key==='ArrowRight')move(1); });
     document.getElementById('prevBtn').onclick=()=>{ if(isFS())move(-1); };
     document.getElementById('nextBtn').onclick=()=>{ if(isFS())move(1); };
     document.getElementById('fsBtn').onclick=()=>{ isFS()?exitFS():enterFS(); };
